# WaveMilestone

./: .env.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  Makefile  README.md  clippy.toml  rustfmt.toml
.github/: CODEOWNERS  CODE_OWNER_GUIDANCE.md  dependabot.yml
.github/workflows/: audit.yml  ci.yml  clippy.yml  issue-triage.yml  lint.yml  release.yml  soroban-deploy.yml
contracts/wave_milestone/: Cargo.toml
contracts/wave_milestone/src/: events.rs  lib.rs  test.rs  types.rs
contracts/wave_milestone/tests/: claim_manipulation.rs  clawback.rs  create_pool.rs  duplicate_claim.rs  error_enum_coverage.rs  full_lifecycle.rs  milestone_balance_query.rs  multi_developer_payouts.rs  over_allocation.rs  release_bounty.rs  unauthorized_access.rs
contracts/wave_milestone/tests/common/: mock_guard.rs  mock_token.rs  mod.rs
docker/: Dockerfile  Dockerfile.test  docker-compose.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  LABEL_MANAGEMENT.md  SECURITY.md  TESTING.md  TESTING_WITH_MOCKS.md  WAVEGUARD_MAINTAINER.md  pr-description-105.md  pr-description-86.md  pr-description-91.md
docs/examples/: create_milestone_pool.md
scripts/: bootstrap.sh  build.sh  deploy.sh  deploy_testnet.sh  mock_pool.sh  setup.sh  test.sh
