[workspace]
members = [
    "contracts/wave_milestone",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["WaveMilestone Contributors"]
repository = "https://github.com/anomalyco/wave-milestone"
homepage = "https://github.com/anomalyco/wave-milestone"

[workspace.dependencies]
soroban-sdk = { version = "22.0.0", default-features = false }

[workspace.lints.clippy]
all = "deny"
pedantic = "deny"
nursery = "deny"
cargo = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
wildcard_imports = "deny"
semicolon_inside_block = "deny"
cast_possible_truncation = "deny"
cast_lossless = "deny"
doc_markdown = "deny"
missing_errors_doc = "deny"
missing_panics_doc = "deny"
must_use_candidate = "deny"
return_self_not_must_use = "deny"
similar_names = "deny"
too_many_lines = "deny"
use_self = "deny"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
