[workspace]
members = [
    "contracts/wave_milestone",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["WaveMilestone Contributors"]
repository = "https://github.com/anomalyco/wave-milestone"
homepage = "https://github.com/anomalyco/wave-milestone"

[workspace.dependencies]
soroban-sdk = { version = "22.0.0", default-features = false }

[workspace.lints.clippy]
all = "deny"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
